# CategorAIze

./: .gitignore  .likec4ignore  .pre-commit-config.yaml  QUICKSTART.md  README.md  coverage.json  likec4.config.ts  mkdocs.yml  mkdocs_plugins.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  deploy-docs.yml
configs/: train_config.yaml  train_config_lr.yaml
docs/: adr.md  index.md  likec4.config.ts
docs/_assets/: mermaid-init.js  plantuml-init.js  plantuml.css
docs/_likec4/: adr.c4  likec4.config.ts  specs.c4
docs/_likec4/adrs/: adr.c4
docs/_likec4/services/: architecture.c4  global.c4
docs/_macros/: main.py
docs/adr/: 001-global-adr.md  001-personalized-classification.md  002-personalized-classification.md  index.md
docs/architecture/: components.md  overview.md
docs/guides/: contributing.md  documentation.md  local-setup.md  style.md
docs/likec4/: index.md
docs/likec4/model/: adr.likec4
scripts/: build-likec4.sh  serve-docs.sh
site/: docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
site/src/css/: custom.css
src/categoraize/: __init__.py  train.py
src/categoraize/data/: __init__.py  loader.py  preprocessor.py
src/categoraize/models/: __init__.py  classifier.py
src/categoraize/training/: __init__.py  evaluator.py  trainer.py
tests/: __init__.py  conftest.py  test_classifier.py  test_data_loader.py  test_data_preprocessor.py  test_evaluator.py  test_predictions.py  test_trainer.py
tools/: escape_macros_plugin.py
