[tool.poetry]
name = "categoraize"
version = "0.1.0"
description = "Система персонализированной классификации финансовых трат пользователей с использованием ML"
authors = ["MoneyCluster Team"]
readme = "README.md"
packages = [{include = "categoraize", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.7.0"
scikit-learn = "^1.5.0"
transformers = "^4.46.0"
huggingface-hub = "^0.24.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic = "^2.9.0"
pandas = "^2.2.0"
numpy = "^2.1.0"
pyyaml = "^6.0.1"
joblib = "^1.4.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.7.0"
types-PyYAML = "^6.0.0"

[tool.poetry.scripts]
categoraize-train = "categoraize.train:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "ISC", "ICN", "T20", "SIM", "ARG", "PTH", "PL", "TRY", "RUF"]
ignore = [
    "RUF001",  # Игнорируем предупреждения о кириллице в строках
    "RUF002",  # Игнорируем предупреждения о кириллице в docstrings
    "RUF003",  # Игнорируем предупреждения о кириллице в комментариях
    "TRY003",  # Разрешаем длинные сообщения в исключениях
    "PLR2004",  # Разрешаем магические числа в сравнениях
    "N806",  # Разрешаем использование X, y для ML кода (стандартная практика)
    "N803",  # Разрешаем использование X, y в сигнатурах функций (стандартная практика ML)
    "F841",  # Разрешаем неиспользуемые переменные (для отладочных целей)
    "ARG002",  # Разрешаем неиспользуемые аргументы
    "E501",  # Разрешаем длинные строки (black форматирует автоматически)
    "C416",  # Разрешаем dict comprehension
    "PTH123",  # Разрешаем open() вместо Path.open() (для совместимости)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"mkdocs_plugins.py" = ["E402"]  # Разрешаем импорт после изменения sys.path

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/categoraize --cov-report=term-missing --cov-report=html"
